gobmkida/c3/ping_recurse
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/ping_recurse/src/engine/worm.c:1820:28: error: use of undeclared identifier 'byte_9C689F'
&& v9 != ( unsigned __int8)byte_9C689F[v10] 
                           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/ping_recurse/src/engine/worm.c:1821:28: error: use of undeclared identifier 'byte_9C688C'
&& v9 != ( unsigned __int8)byte_9C688C[v10] 
                           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/ping_recurse/src/engine/worm.c:1835:28: error: use of undeclared identifier 'byte_9C689F'
&& v9 != ( unsigned __int8)byte_9C689F[v11] 
                           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/ping_recurse/src/engine/worm.c:1836:28: error: use of undeclared identifier 'byte_9C688C'
&& v9 != ( unsigned __int8)byte_9C688C[v11] 
                           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/ping_recurse/src/engine/worm.c:1850:28: error: use of undeclared identifier 'byte_9C689F'
&& v9 != ( unsigned __int8)byte_9C689F[v12] 
                           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/ping_recurse/src/engine/worm.c:1851:28: error: use of undeclared identifier 'byte_9C688C'
&& v9 != ( unsigned __int8)byte_9C688C[v12] 
                           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/ping_recurse/src/engine/worm.c:1865:28: error: use of undeclared identifier 'byte_9C689F'
&& v9 != ( unsigned __int8)byte_9C689F[v13] 
                           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/ping_recurse/src/engine/worm.c:1866:28: error: use of undeclared identifier 'byte_9C688C'
&& v9 != ( unsigned __int8)byte_9C688C[v13] 
                           ^
8 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/ping_recurse/src/obj/1/worm.o] Error 1
